AM_CPPFLAGS = -I$(top_srcdir)/src
LDADD = -lgsl -lgslcblas -lm 
noinst_LIBRARIES = libcosmology.a libgetaline.a libcallocmatrix.a
libcosmology_a_SOURCES = cosmology.c 
libgetaline_a_SOURCES = getaline.c
libcallocmatrix_a_SOURCES = callocmatrix.c
noinst_HEADERS = cosmology.h getaline.h callocmatrix.h




